<resources>
    <string name="app_name">Simple Note</string>
    <string name="Add_note">Add note</string>
    <string name="Edit_note">Edit Note</string>
    <string name="Edit_checklist">Edit Checklist</string>
    <string name="Note">Notes</string>
    <string name="Checklist">Checklists</string>
    <string name="Reminder">Reminders</string>
    <string name="ProgressTracker">Progress Tracker</string>
    <string name="Settings">Settings</string>
    <string name="AddNote">Add Note.</string>
    <string name="EnterNoteTitle">Enter note title</string>
    <string name="EnterNoteDescription">Enter Note Description…</string>
    <string name="CheckImageContentDescriptionNote">Create New Note</string>
    <string name="titleTextView">Title</string>
    <string name="contentTextView">Content</string>
    <string name="editNote">Edit Note</string>
    <string name="deleteNote">Delete Note</string>
    <string name="editChecklist">Edit Checklist</string>
    <string name="deleteChecklist">Delete Checklist</string>
    <string name="AppImage">App Image</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <string name="Checkbox">Checkbox</string>
    <string name="AddChecklistItemButton">Add New Checklist Item</string>
    <string name="ConfirmButton">Confirm</string>
    <string name="CancelButton">Cancel</string>
    <string name="CreateButton">Create</string>
    <string name="EnterChecklistItemContent">Enter Item Content</string>
    <string name="EnterChecklistTitle">Enter Checklist Title</string>
    <string name="EditChecklistItemContent">Edit Item Content</string>
    <string name="AddChecklistItemContent">Enter Item Content</string>
    <string name="editReminder">Edit Reminder</string>
    <string name="editChecklistItem">Edit Checklist Item</string>
    <string name="deleteReminder">Delete Reminder</string>
    <string name="time">Time</string>
    <string name="date">Date</string>
    <string name="selectDate">Select Date: </string>
    <string name="selectTime">Select Time: </string>
    <string name="clock">Select Time</string>
    <string name="calender">Select Date</string>
    <string name="newReminder">New Reminder</string>
    <string name="newChecklist">New Checklist</string>
    <string name="newChecklistItem">New Checklist Item</string>
    <string name="reminderName">Enter Reminder Name</string>
    <string name="dismiss">Dismiss</string>
    <string name="notificationText">Reminder</string>
    <string name="notificationTitle">Title</string>
    <string name="lateDesc">Late Task</string>
    <string name="lateTasks">Late Tasks</string>
    <string name="unfinishedDesc">Unfinished Task</string>
    <string name="unfinishedTasks">Unfinished Tasks</string>
    <string name="onTimeDesc">On Time Task</string>
    <string name="onTimeTasks">On Time Tasks</string>
    <string name="rateNewTaskButton">Rate New Task</string>
    <string name="deleteAllProgressButton">Delete All Progress</string>
    <string name="rateYourTaskTitle">Rate Your Task</string>
    <string name="late">Late</string>
    <string name="unfinished">Unfinished</string>
    <string name="onTime">On Time</string>
</resources>