<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawer_layout"
    android:fitsSystemWindows="true"
    tools:openDrawer="start"
    tools:context=".ProgressTrackerActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/orange"
            app:title="@string/ProgressTracker"
            app:titleMarginStart="30dp"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            android:layout_alignParentTop="true"/>


        <com.github.mikephil.charting.charts.PieChart
            android:id="@+id/pieChart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/toolbar"
            android:layout_margin="16dp" />


        <LinearLayout
            android:id="@+id/legendLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/pieChart"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="16dp">


            <ImageView
                android:id="@+id/redLegend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_red"
                android:contentDescription="@string/lateDesc"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lateTasks" />


            <ImageView
                android:id="@+id/yellowLegend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_yellow"
                android:layout_marginStart="15dp"
                android:contentDescription="@string/unfinishedDesc"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unfinishedTasks" />


            <ImageView
                android:id="@+id/greenLegend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_green"
                android:layout_marginStart="15dp"
                android:contentDescription="@string/onTimeDesc"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/onTimeTasks" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/buttonLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/legendLayout"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginTop="32dp">

            <Button
                android:id="@+id/rateNewTaskButton"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/rateNewTaskButton"
                android:textColor="@color/white"
                android:backgroundTint="@color/orange"/>


            <Button
                android:id="@+id/deleteAllProgressButton"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/deleteAllProgressButton"
                android:textColor="@color/white"
                android:backgroundTint="@color/orange"/>
        </LinearLayout>



    </RelativeLayout>

    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/navigation_view"
        android:layout_gravity="start"
        app:headerLayout="@layout/navigation_header"
        app:menu="@menu/navigation_menu"
        app:itemIconTint="@color/lavender"
        android:paddingTop="15dp"/>

</androidx.drawerlayout.widget.DrawerLayout>