<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:id="@+id/addReminderDialogTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/editChecklistItem"
        android:layout_gravity="center_horizontal"
        android:textSize="25sp"
        android:fontFamily="@font/poppins"
        android:textColor="@color/orange"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/dialogEditChecklistItemContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:lines="3"
        android:minLines="1"
        android:maxLines="3"
        android:backgroundTint="@color/orange"
        android:hint="@string/EditChecklistItemContent"
        android:importantForAutofill="no" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/dialogButtonCancel"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/CancelButton"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/dialogButtonConfirm"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/ConfirmButton"
            tools:ignore="ButtonStyle" />
    </LinearLayout>
</LinearLayout>