<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp"
    android:orientation="vertical"
    android:layout_marginTop="5dp"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp">

    <TextView
        android:id="@+id/rateTaskPopupTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rateYourTaskTitle"
        android:layout_gravity="center_horizontal"
        android:textSize="25sp"
        android:fontFamily="@font/poppins"
        android:textColor="@color/orange"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/rateLateTask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/late"
        android:textStyle="bold"
        android:textSize="25sp"
        android:fontFamily="@font/poppins"
        android:textColor="@color/black"
        android:backgroundTint="@color/red"/>

    <Button
        android:id="@+id/rateUnfinishedTask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/unfinished"
        android:textStyle="bold"
        android:textSize="25sp"
        android:fontFamily="@font/poppins"
        android:textColor="@color/black"
        android:backgroundTint="@color/yellow"
        android:layout_marginTop="10dp"/>

    <Button
        android:id="@+id/rateOnTimeTask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/onTime"
        android:textStyle="bold"
        android:textSize="25sp"
        android:fontFamily="@font/poppins"
        android:textColor="@color/black"
        android:backgroundTint="@color/green"
        android:layout_marginTop="10dp"/>

</LinearLayout>