<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/AddNoteActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".AddNoteActivity"
    >

    <TextView
        android:id="@+id/addNoteHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="17dp"
        android:fontFamily="@font/poppins"
        android:text="@string/Add_note"
        android:textColor="@color/orange"
        android:textSize="24sp" />

    <ImageView
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_check"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@id/addNoteHeading"
        android:layout_marginEnd="6dp"
        android:contentDescription="@string/CheckImageContentDescriptionNote"/>

    <EditText
        android:id="@+id/titleEditText"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:hint="@string/EnterNoteTitle"
        android:padding="12dp"
        android:textSize="20sp"
        android:layout_below="@id/addNoteHeading"
        android:background="@drawable/orange_border"
        android:layout_marginTop="16dp"
        android:maxLines="1"
        android:fontFamily="@font/poppins"
        android:inputType="text"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/contentEditText"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:hint="@string/EnterNoteDescription"
        android:gravity="top"
        android:padding="12dp"
        android:textSize="18sp"
        android:fontFamily="@font/poppins"
        android:background="@drawable/orange_border"
        android:layout_below="@id/titleEditText"
        android:layout_marginTop="12dp"
        android:inputType="textMultiLine"
        android:importantForAutofill="no" />

</RelativeLayout>