<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center">

    <EditText
        android:id="@+id/dialogAddChecklistTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:lines="3"
        android:minLines="1"
        android:maxLines="3"
        android:backgroundTint="@color/orange"
        android:hint="@string/EnterChecklistTitle"
        android:importantForAutofill="no" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/dialogButtonCancelChecklistMenu"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/CancelButton"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/dialogButtonConfirmChecklistMenu"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/ConfirmButton"
            tools:ignore="ButtonStyle" />
    </LinearLayout>
</LinearLayout>