<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp"
    android:orientation="vertical"
    android:layout_marginTop="5dp"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp">

    <TextView
        android:id="@+id/editReminderDialogTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/editReminder"
        android:layout_gravity="center_horizontal"
        android:textSize="25sp"
        android:fontFamily="@font/poppins"
        android:textColor="@color/orange"
        android:textStyle="bold"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/editSelectTimeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/selectTime"
            android:textSize="19sp"
            android:textColor="@color/orange"
            android:fontFamily="@font/poppins"
            android:textStyle="bold"
            android:minHeight="48dp"
            android:maxLines="1"/>

        <EditText
            android:id="@+id/editReminderTimeEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/editSelectTimeTextView"
            android:layout_marginStart="6dp"
            android:layout_marginEnd="-1dp"
            android:layout_toStartOf="@id/editSelectTimeButton"
            android:layout_toEndOf="@+id/editSelectTimeTextView"
            android:backgroundTint="@color/orange"
            android:clickable="false"
            android:focusable="false"
            android:importantForAutofill="no"
            android:inputType="time"
            android:maxLines="1"
            android:minHeight="48dp"
            android:textSize="19sp"
            tools:ignore="LabelFor,SpeakableTextPresentCheck,TouchTargetSizeCheck,VisualLintTextFieldSize,VisualLintBounds" />

        <ImageView
            android:id="@+id/editSelectTimeButton"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_time"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="5dp"
            android:contentDescription="@string/time" />
    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/editSelectDateTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/selectDate"
            android:textSize="19sp"
            android:textColor="@color/orange"
            android:fontFamily="@font/poppins"
            android:textStyle="bold"
            android:minHeight="48dp"
            android:maxLines="1"/>

        <EditText
            android:id="@+id/editReminderDateEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/editSelectDateTextView"
            android:layout_marginStart="5dp"
            android:layout_toStartOf="@id/editSelectDateButton"
            android:layout_toEndOf="@+id/editSelectDateTextView"
            android:backgroundTint="@color/orange"
            android:clickable="false"
            android:focusable="false"
            android:importantForAutofill="no"
            android:inputType="date"
            android:maxLines="1"
            android:textSize="19sp"
            android:minHeight="48dp"
            tools:ignore="LabelFor,SpeakableTextPresentCheck,TouchTargetSizeCheck,VisualLintTextFieldSize,VisualLintBounds" />

        <ImageView
            android:id="@+id/editSelectDateButton"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_calender"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="5dp"
            android:contentDescription="@string/calender" />
    </RelativeLayout>

    <EditText
        android:id="@+id/dialogEditReminderNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/orange"
        android:hint="@string/reminderName"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:lines="3"
        android:minLines="1"
        android:maxLines="3"
        android:minHeight="48dp"
        tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:paddingBottom="5dp">

        <Button
            android:id="@+id/dialogEditCancelReminder"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/CancelButton"
            tools:ignore="ButtonStyle,TextContrastCheck" />

        <Button
            android:id="@+id/dialogEditConfirmReminder"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/ConfirmButton"
            tools:ignore="ButtonStyle,TextContrastCheck" />
    </LinearLayout>

</LinearLayout>