<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="10dp"
    app:cardElevation="4dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            android:id="@+id/reminderTitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:text="@string/titleTextView"
            android:textColor="@color/orange"
            android:textSize="19sp"
            android:textStyle="bold"
            android:maxLines="1"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/timeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time"
                android:fontFamily="@font/poppins"
                android:maxLines="1"
                android:textSize="35sp"
                tools:ignore="RelativeOverlap" />

            <TextView
                android:id="@+id/dateTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:fontFamily="@font/poppins"
                android:maxLines="1"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="90dp"
                tools:ignore="RelativeOverlap"
                android:textSize="16sp"
                />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/reminderSwitch"
                android:layout_width="45dp"
                android:layout_height="24dp"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="80dp"
                app:trackTint="@color/grey"
                app:thumbTint="@color/selectorThumbWhite"/>

            <ImageView
                android:id="@+id/updateReminderButton"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="40dp"
                android:layout_marginTop="30dp"
                android:contentDescription="@string/editReminder"
                android:src="@drawable/ic_edit" />

            <ImageView
                android:id="@+id/deleteReminderButton"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignParentEnd="true"
                android:src="@drawable/ic_delete"
                android:layout_marginTop="30dp"
                android:contentDescription="@string/deleteReminder"/>
        </RelativeLayout>

    </LinearLayout>
</androidx.cardview.widget.CardView>