<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="10dp"
    app:cardElevation="4dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            tools:ignore="UselessParent">

            <CheckBox
                android:id="@+id/checkbox"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignParentStart="true"
                android:contentDescription="@string/Checkbox"
                android:src="@drawable/ic_check_box"
                android:paddingTop="2dp"
                android:checked="false"
                />

            <TextView
                android:id="@+id/contentChecklistItemTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:text="@string/contentTextView"
                android:textColor="@color/orange"
                android:textSize="19sp"
                android:textStyle="bold"
                android:maxLines="3"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="20dp"
                tools:ignore="RelativeOverlap" />

            <ImageView
                android:id="@+id/deleteChecklistItemButton"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignParentEnd="true"
                android:src="@drawable/ic_delete"
                android:contentDescription="@string/deleteNote"/>
        </RelativeLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>